# Quantum_computing

./: .gitignore  README.md  pyproject.toml
S01/: S01P01.py  S01P02.py  S01P03.py  S01P04.py  S01P05.py  practica.md
S02/: practica.md  practica_02.ipynb
S03/: practica_02.md  puertas_pauli.ipynb
S05/: practica.ipynb  practica_ruleta_Santiago_Souto.ipynb
S07/practice/: S07P00A.py  S07P00B.py  S07P00C.py  S07P00D.py  S07P01A.py  S07P01B.py  S07P01C.py  S07P01D.py  S07P02A.py  S07P02B.py  S07P02C.py  S07P02D.py  S07P03A.py  S07P03B.py  S07P03C.py  S07P03D.py  S07P04A.py  S07P04B.py  S07P04C.py  S07P04D.py  S07P04E.py  S07P04F.py  S07P04G.py  S07P04H.py  S07P05B.py  S07P05D.py  S07P05E.py  S07P05F.py  S07P07B.py  S07P08A.py  S07P08B.py  S07P09C.py  S07P10A.py  S07P10B.py  S07P10C.py  S07P10D.py  S07P10E.py  S07P10F.py  S07P10G.py  S07P10H.py
S08/: practica_03.ipynb
S10/: practica_IV.ipynb
S12/: dado_cuantico.py  dado_cuantico_ruido.ipynb  requirements.txt
S14/: ESTILO_CODIGO.md  GUIA_RAPIDA.md  README.md  main.py  pr.py  requirements.txt  test_rapido.py
S14/control_clasico/: __init__.py  ejemplo_uso.py  juego_moneda_trampa.py
S14/docs/: guia_qpu_real.md
S14/entregable1_multithreading/: __init__.py  ejemplo_uso.py  moneda_cuantica.py
S14/entregable2_control_clasico/: __init__.py  ejemplo_uso.py  juego_moneda_trampa.py
S14/multithreading/: __init__.py  ejemplo_uso.py  moneda_cuantica.py
S14/utils/: __init__.py  quantum_utils.py
