[project]
name = "computacion-cuantica-s07"
version = "0.1.0"
description = "Práctica de Computación Cuántica - Puertas Multiqúbit"
authors = [
    {name = "Tu Nombre", email = "tu.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "matplotlib>=3.7.0",
    "ipykernel>=6.0.0",
    "pyquil>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]